# robot_modeling

./: README.md
robot_modeling/: CMakeLists.txt  package.xml
urdf_for_robot_modeling/: README.md
urdf_for_robot_modeling/urdf_for_robot_modeling/: CMakeLists.txt  package.xml
your_first_robot_with_ros/: CMakeLists.txt  README.md  package.xml
your_first_robot_with_ros/include/you_first_robot_with_ros/: your_first_robot_with_ros.hpp
your_first_robot_with_ros/rosbots_description/: CMakeLists.txt  package.xml
your_first_robot_with_ros/rosbots_description/launch/: rviz.launch  spawn.launch
your_first_robot_with_ros/rosbots_description/rviz/: rosbots.rviz
your_first_robot_with_ros/rosbots_description/urdf/: rosbots.camera.gazebo.xacro  rosbots.camera.xacro  rosbots.gazebo.xacro  rosbots.imu.gazebo.xacro  rosbots.xacro  rosbots2.xacro
your_first_robot_with_ros/src/: your_first_robot_with_ros.cpp
your_first_robot_with_ros/your_first_robot_with_ros/: CMakeLists.txt  package.xml
